@@ -1,3 +1,5 @@
+* Sun Oct 05 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.2
+- remove a file breaking build
 * Sun Oct 05 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.1
 - use the Python logging module for all logging in modRana
  - so we now have nice logging levels, module indicators and messages from threads look nice :)
